Update project name

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,4 +1,2 @@
 ignore:
-  - "Networking/Tests/**/*"
-  - "Networking/Sources/NetworkingTestHelpers/**/*"
-  - "ImageLoader/Tests/**/*"
+  - "FileExplorer/Tests/**/*"
