--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -22,7 +22,7 @@ jobs:
       run: sudo xcode-select --switch /Applications/Xcode_${{ matrix.xcode }}.app
 
     - name: ${{ matrix.scheme }} tests
-      run: xcodebuild test -scheme ${{ matrix.scheme }} -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.7' -enableCodeCoverage YES
+      run: xcodebuild test -scheme ${{ matrix.scheme }} -destination 'platform=OS X,arch=x86_64' -enableCodeCoverage YES
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
