Add tests for Storage

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scheme: ["FileExplorer"]
+        scheme: ["FileExplorer", "Utils"]
         xcode: ["11.7"]
 
     steps:
