--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         scheme: ["FileExplorer", "Utils"]
-        xcode: ["11.7"]
+        xcode: ["12.2"]
 
     steps:
     - uses: actions/checkout@v2
@@ -22,7 +22,7 @@ jobs:
       run: sudo xcode-select --switch /Applications/Xcode_${{ matrix.xcode }}.app
 
     - name: ${{ matrix.scheme }} tests
-      run: xcodebuild test -scheme ${{ matrix.scheme }} -destination 'platform=OS X,arch=x86_64' -enableCodeCoverage YES
+      run: set -o pipefail && xcodebuild test -scheme ${{ matrix.scheme }} -destination 'platform=OS X,arch=x86_64' -enableCodeCoverage YES | xcpretty
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
